--- a/app.css
+++ b/app.css
@@ -1,49 +1,96 @@
-*{
-        scrollbar-color: #666 #201c29;
-    color: #fff;
-    font-size: 16px;
-
+:root{
+    --purple: rebeccapurple;
 }
-body,header,main{
-    background: #1b1b1b;
-
-  }
   #container{
+    gap: 5pt 5pt;
     max-width: 930px ;
     align-items: center;
     justify-content: center;
     display: grid;
     margin: 0 auto;
   }
-  .center{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  #container-content{
+    max-width: 80%;
+    margin-top: 30pt;
+    margin: 0 auto;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 15pt 15pt;
+
   }
-  .center  img{
+  #container-content h1{
+    max-width: 100%;
+    padding: 15pt 0pt;
+    line-height: 1;
+
+    font-size: 200%;
+    font-weight: 600;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: relative;
+  }
+  #container-content h1::after{
+    content: '';
+    position: absolute;
+    background-color:var(--purple);
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    width: 10px;
+  }
+  .code{
+    position: relative;
+    display: grid;
+    padding: 15pt 5pt;
+    align-items: center;
+  }
+  .code .img{
+    max-width:456px; 
+    max-height:556px;
+    border-radius: 5pt;
+    padding:5pt 5pt;
+    box-shadow: rgba(153, 0, 255, 0.589) 3px 3px 6px 0px inset, rgba(183, 2, 255, 0.5) -3px -3px 6px 1px inset;
+  }
+  .code img{
     align-content: center;
     justify-content: center;
-    max-width: 30%;
+    width: 100%;
+    height: 100%;
     border-radius: 5pt;
     margin: 0 auto;
     display: inline;
-    min-height: 30%;
   }
-  .code-content{
-    gap: 5pt 5pt;
-  }
+  
   .code-content #demo{
-    max-width: 89%;
-  align-content: center;
-  margin: 0 auto;
-}
+    font-size: 150%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    border-radius: 5pt;
+    min-height: 30%;
+    padding: 15pt 0pt;
+    content: '111';
+    }
+    .code-content section{
+        padding: 5pt 5pt;
+        line-height: 25pt;
+        font-size:130%;
+        top: 0;
+        left: 0;
+        position:absolute;
+    }
   .code-content span{
     display: flex;
-
     flex-direction: column;
     align-items: center;
   }
-  .code-content #demo{
-    font-size: 86%;
-  }
+  
+/* defaults css alignment */
+.center{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
