--- a/app.css
+++ b/app.css
@@ -22,7 +22,7 @@
     padding: 15pt 0pt;
     line-height: 1;
 
-    font-size: 200%;
+    font-size:16pt;
     font-weight: 600;
     margin: 0 auto;
     justify-content: center;
